[package]
name = "bridge"
authors = ["ByFox"]
readme = "README.md"
license = "MIT"
version = "0.2.0"
edition = "2021"

[dependencies]
tw-econ = { git = "https://github.com/teeworlds-nats/asyns-tw-econ" }
async-nats = { version = "0.38.0"}
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.210"
serde_yaml = "0.9.33"
serde_json = "1.0.133"
futures-util = "0.3.31"
clap = { version = "4.5.21", features = ["derive"] }
once_cell = "1.20.2"
regex = "1.11.1"
futures = "0.3.31"
signal-hook = "0.3.17"
bytes = "1.9.0"
nestify = "0.3.3"
